--- a/reactversion/source3/src/components/css/StarExplosion.css
+++ b/reactversion/source3/src/components/css/StarExplosion.css
@@ -45,11 +45,11 @@
 
 @keyframes sex-1{
     0%{
-        transform: translate(-50%,-50%) rotate(-360deg);
+        transform: translate(-50%,-50%);
         opacity:1;
     }
     100%{
-        transform: scale(0.2,0.2) rotate(360deg);
+        transform: scale(0.2,0.2);
         left:100%;
         top:0;
         opacity:0;
@@ -62,11 +62,11 @@
 
 @keyframes sex-2{
     0%{
-        transform: translate(-50%,-50%) rotate(-360deg);
+        transform: translate(-50%,-50%);
         opacity:1;
     }
     100%{
-        transform: scale(0.2,0.2) rotate(360deg);
+        transform: scale(0.2,0.2);
         top:-200px;
         opacity:0;
     }
@@ -78,11 +78,11 @@
 
 @keyframes sex-3{
     0%{
-        transform: translate(-50%,-50%) rotate(-360deg);
+        transform: translate(-50%,-50%);
         opacity:1;
     }
     100%{
-        transform: scale(0.2,0.2) rotate(360deg);
+        transform: scale(0.2,0.2);
         top:-200px;
         left:10px;
         opacity:0;
@@ -95,11 +95,11 @@
 
 @keyframes sex-4{
     0%{
-        transform: translate(-50%,-50%) rotate(-360deg);
+        transform: translate(-50%,-50%);
         opacity:1;
     }
     100%{
-        transform: scale(0.2,0.2) rotate(360deg);
+        transform: scale(0.2,0.2);
         left:-100px;
         top:50px;
         opacity:0;
@@ -112,11 +112,11 @@
 
 @keyframes sex-5{
     0%{
-        transform: translate(-50%,-50%) rotate(-360deg);
+        transform: translate(-50%,-50%);
         opacity:1;
     }
     100%{
-        transform: scale(0.2,0.2) rotate(360deg);
+        transform: scale(0.2,0.2);
         left:100%;
         top:300px;
         opacity:0;
